# datascience_env

analytics/: pyvenv.cfg
analytics/My_Analysis/: Makefile  README.md  pyproject.toml
analytics/My_Analysis/analysis/: __init__.py  dataset.py  features.py  plots.py
analytics/My_Analysis/analysis/modeling/: predict.py  train.py
analytics/My_Analysis/docs/: Covid_Script.sql  mkdocs.yml
analytics/My_Analysis/docs/docs/: index.md
analytics/Scripts/: activate  activate.bat
