[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "analysis"
version = "0.0.1"
description = "Here are my data analysis projects to show up my proficiency using python, sql, tableau and power bi"
authors = [
  { name = "Mastakod" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.4"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["analysis"]
force_sort_within_sections = true
